--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,8 @@ flutter:
     #- images/a_dot_ham.jpeg
     - assets/video/NL.mp4
     - assets/audio/
+    - assets/calibration/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
